tests/types/errors/generate_type_mismatch.mochi
let result = generate text {
  prompt: 123,
  temperature: "hot"
}
